--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
-<body>
+
+<html lang="en">
+
+    
+<head>
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>HTML 5 Boilerplate</title>
 <script>
 const LINK_TABLE = {
 	"x8wU1": "https://penielranch.org/events",
-	"mikcool": "https://mikjakrych.github.io"
+	"mikcool": "https://mikjakrych.github.io",
+	"2M6Vy1": "https://www.irs.gov/charities-and-nonprofits",
+	"8zTi2": "https://www.llamau.org.uk/what-causes-youth-homelessness"
 }
 let tail = location.hash.replaceAll("#","");
 
@@ -12,5 +21,10 @@ if(LINK_TABLE[tail]){
 location = LINK_TABLE[tail]
 }
 </script>
+</head>
+<body>
+<div>
+
+</div>
 </body>
 </html>
