--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		"2Nv9i": "https://www.home-school.com/events/",
 		"d92lO": "http://www.cfhe.net/annual-homeschool-conference1.html",
 		"d92Mn": "https://seochatter.com/what-are-bad-backlinks/",
+		"lIs9b": "https://www.techtodaypost.com/write-for-us/",
         	"8zTi2": "https://www.llamau.org.uk/what-causes-youth-homelessness"
         }
         let tail = location.hash.replaceAll("#","");
